# juste_app_nexialog

./: .gitignore  README.md  app.py  pyproject.toml
callbacks/: alisa_lof_callbacks.py  chat_callbacks.py  isolation_forest_callbacks.py  sidebar_callbacks.py
components/: accueil.py  alisa_lof_sidebar.py  chat.py  isolation_forest_sidebar.py  modelisation.py  navbar.py  sidebar.py
styles/: theme.py
utils/: asset_loader.py  auto_scroll.py  data_loader.py  graph_utils.py
