[tool.poetry]
name = "nexialog-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
holidays = "^0.69"
pyarrow = "^19.0.1"
dash = "^3.0.1"
dash-bootstrap-components = "^2.0.0"
plotly = "^6.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
